<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="focus_logo_background">Focus logo background</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="the_camera_was_disconnected">Body Camera Disconnected</string>
    <string name="the_camera_was_disconnected_description">Your Body Camera was disconnected from FOCUS Mobile App. Please tap <b>OK</b> and reconnect again.</string>
    <string name="loading_wait">Loading…</string>
    <string name="connection_bluetooth">Connecting with bluetooth</string>
    <string name="connection_finished">Idle Session Timeout</string>
    <string name="connection_finished_description">Your Body Camera was disconnected from FOCUS Mobile App after 5 minutes of inactivity.</string>
    <string name="gps_necessary_title">Location Required</string>
    <string name="gps_necessary_description">Please turn ON location services / GPS in order to use the app.</string>
    <string name="battery_alert_title">Low Battery Warning</string>
    <string name="battery_alert_description">Please charge your Body Camera.</string>
    <string name="storage_alert_title">Low Storage Warning</string>
    <string name="storage_alert_description">Your Body Camera has reached 95% of its storage capacity.</string>
    <string name="skip_intro">Skip</string>
    <string name="description_card_1">Please, &lt;b&gt;turn on &lt;/b&gt; the Body-Camera hotspot.</string>
    <string name="description_card_2">Please Enter your OfficerID and tap in the &lt;b&gt;Continue&lt;/b&gt; button.</string>
    <string name="description_card_3">If you are in this screen, please enter your email and tap in the &lt;b&gt;Next&lt;/b&gt; button.</string>
    <string name="description_card_4">If you are in this screen, please enter your password and tap in the &lt;b&gt;Login&lt;/b&gt; button.</string>
    <string name="description_card_5">If you are in this screen, please enter your device password and tap in the &lt;b&gt;Connect&lt;/b&gt; button.</string>
    <string name="please_enable_permission">Please enable permission from settings</string>
    <string name="please_enable_permission_location">Require location permission for pairing the Body Camera.</string>
    <string name="please_enable_permission_setting_nearby">Please turn on nearby permission at [Setting] > [Permission]</string>
    <string name="please_enable_permission_setting_location">Please turn on location permission at [Setting] > [Permission]</string>
    <string name="waiting_for_camera">Click here to connect\nwith the Body Camera</string>
    <string name="result_pairing_description">Result of the pairing process</string>
    <string name="instructions_to_link_camera">Instructions to link Body Camera</string>
    <string name="connecting_to_camera">Connecting to Body Camera</string>
    <string name="welcome_officer">Please enter your password</string>
    <string name="enter_password">Password</string>
    <string name="incorrect_password">The password you have entered is incorrect. Please try again.</string>
    <string name="wifi_is_off">Wi-Fi is off</string>
    <string name="please_turn_wifi_on">The Wi-Fi is set to be off on your device. Please turn on the Wi-Fi and reconnect the Body Camera with FMA.</string>
    <string name="image_description_full_screen_size">Full Screen</string>
    <string name="live_view_label">Live view</string>
    <string name="logout">Exit FMA</string>
    <string name="logout_message">Are you sure you want to exit the FOCUS Mobile App?</string>
    <string name="icon_user_menu">Officer Information Menu</string>
    <string name="icon_close_menu">Close Menu</string>
    <string name="live_view_menu_item_dashboard">Dashboard</string>
    <string name="live_view_menu_item_view_snapshots">View Snapshots</string>
    <string name="live_view_menu_item_view_videos">View Videos</string>
    <string name="live_view_menu_item_view_audios">View Audios</string>
    <string name="live_view_menu_item_bodyworn_settings">Body Camera Settings</string>
    <string name="live_view_menu_item_notification">Notifications</string>
    <string name="live_view_menu_item_diagnose">Body Camera Diagnosis</string>
    <string name="live_view_menu_item_help">Help</string>
    <string name="live_view_menu_item_privacy_policy">Privacy Policy</string>
    <string name="live_view_menu_logout">Logout</string>
    <string name="live_view_take_photo_success">Snapshot captured successfully</string>
    <string name="live_view_take_photo_failed">The system failed to capture a snapshot</string>
    <string name="button_snapshot">Snapshot</string>
    <string name="button_record_description">Record</string>
    <string name="take_snapshots">Take Snapshot</string>
    <string name="record_video">Record Video</string>
    <string name="record_audio">Record Audio</string>
    <string name="snapshot_list_description">Snapshot List</string>
    <string name="view_snapshots">View Snapshots</string>
    <string name="video_list_description">Video List</string>
    <string name="view_videos">View Videos</string>
    <string name="file_list_failed_load_files">Failed to load the files. Please retry or check the Body Camera again.</string>
    <string name="file_list_date_default"><u>Date</u></string>
    <string name="file_list_event_default">Event</string>
    <string name="no_images_found">No snapshots found</string>
    <string name="no_videos_found">No videos found</string>
    <string name="no_audios_found">No audios found</string>
    <string name="getting_files_error">File Retrieval Error</string>
    <string name="getting_files_error_description">The system failed to retrieve all the requested files. Please try again.</string>
    <string name="play_pause_playback_button_description">Play/Pause Video</string>
    <string name="aspect_video_playback_description">Video Aspect</string>
    <string name="video_default_time">00:00:00</string>
    <string name="playback_start_time">Start Time</string>
    <string name="playback_duration">Duration</string>
    <string name="playback_event">Event</string>
    <string name="playback_partner_id">Partner ID</string>
    <string name="playback_ticket_1">Ticket #1</string>
    <string name="playback_ticket_2">Ticket #2</string>
    <string name="playback_case_1">Case #1</string>
    <string name="playback_case_2">Case #2</string>
    <string name="playback_dispatch_1">Dispatch #1</string>
    <string name="playback_dispatch_2">Dispatch #2</string>
    <string name="playback_location">Location</string>
    <string name="playback_notes">Notes</string>
    <string name="playback_first_name">First Name</string>
    <string name="playback_last_name">Last Name</string>
    <string name="playback_gender">Gender</string>
    <string name="playback_race">Race</string>
    <string name="playback_driver_license">Driver License</string>
    <string name="playback_license_plate">License Plate</string>
    <string name="select_event">Select event</string>
    <string name="select_category">Select category</string>
    <string name="event_mandatory">Please select Event Type</string>
    <string name="category_mandatory">Please select Category Type</string>
    <string name="catalog_error">Failed to retrieve the events. Please retry or check the Body Camera again.</string>
    <string name="catalog_error_video_playback">Failed to retrieve the events. Please check the Body Camera again.</string>
    <string name="get_video_metadata_error">Failed to retrieve video metadata. Please try again.</string>
    <string name="video_metadata_saved_success">The changes you have made were saved successfully</string>
    <string name="video_metadata_save_error">Failed to save your changes. Please try again.</string>
    <string name="unsaved_changes">Unsaved changes</string>
    <string name="unsaved_changes_message">Are you sure you want to leave this page without saving any of your changes?</string>
    <string name="snapshot_item_detail_title">Snapshot Detail</string>
    <string name="snapshot_item_detail_photo_name_title">Name</string>
    <string name="snapshot_item_detail_photo_name_value">Default</string>
    <string name="snapshot_item_detail_date_time_title">Date &amp; Time</string>
    <string name="snapshot_item_detail_officer_assigned_title">Associated officer</string>
    <string name="snapshot_item_detail_video_assigned_title">Assigned to video</string>
    <string name="snapshot_item_detail_date_time_value">YYYY-MM-DD HH:MM:SS</string>
    <string name="snapshot_item_detail_photo_content_description">Photo from Body Camera</string>
    <string name="snapshot_detail_load_failed">Failed to open snapshot. Please go back and try again.</string>
    <string name="image_video_recording">Video recording</string>
    <string name="save_metadata">Save</string>
    <string name="none">None</string>
    <string name="playback_video_name">Name</string>
    <string name="default_text">Default text</string>
    <string name="snapshot_detail_metadata_error">Failed to retrieve snapshot information. Please try again.</string>
    <string name="audio_item_detail_title">Audio Detail</string>
    <string name="audio_detail_load_failed">Unable to open audio, please go back or try again.</string>
    <string name="audio_detail_metadata_error">Unable to get audio information, please try again.</string>
    <string name="allowedOfficerIdAssociatedPattern">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="allowedOfficerIdPattern">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789@.-_</string>
    <string name="associate_partner_id_content_description">Associate Partner ID</string>
    <string name="file_list_associate_partner_id_success">The Partner ID has been associated successfully.</string>
    <string name="file_list_associate_partner_id_error">Partner ID could not be associated</string>
    <string name="associate_partner_to_file_button_description">Associate Partner ID with file</string>
    <string name="button_link_snapshots_description">Link snapshots</string>
    <string name="button_link_audios_description">button link audios</string>
    <string name="valid_partner_id_message">You must enter a valid Partner ID</string>
    <string name="mobile_data_status_title">Mobile Data</string>
    <string name="mobile_data_status_message">Please disable Mobile Data on your device in order to connect the Body Camera with the FOCUS Mobile App.</string>
    <string name="verify_camera_wifi">Please verify the Wi-Fi connection between the Body Camera and FOCUS Mobile App.</string>
    <string name="go">GO</string>
    <string name="camera_status">Body Camera Status</string>
    <string name="memory_level">memory usage</string>
    <string name="battery_level">battery level</string>
    <string name="battery_percent_placeholder"><b>100%</b> - 10 hour left</string>
    <string name="storage_level_placeholder_x1">Used \  - \  Free\n <b>272 MB</b> - <b>57.7GB</b></string>
    <string name="button_help">\?</string>
    <string name="choose_camera_type">Please turn on your Body-Camera, check the display and choose the one that matches</string>
    <string name="camera_display_image_description">Body-Camera display image</string>
    <string name="x1">X1</string>
    <string name="x2">X2</string>
    <string name="x1_camera_button_description">X1 Body-Camera button</string>
    <string name="x2_camera_button_description">X2 Body-Camera button</string>
    <string name="continue_text">Continue</string>
    <string name="or">or</string>
    <string name="display">Display</string>
    <string name="officer_id">Enter your officer ID</string>
    <string name="change_camera_type">Reset Camera</string>
    <string name="go_to_on_boarding_cards">Go to onboarding cards</string>
</resources>