<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <Button
        android:id="@+id/buttonSnapshotList"
        android:layout_width="@dimen/no_dp"
        android:layout_height="@dimen/no_dp"
        android:background="@color/transparent"
        android:contentDescription="@string/snapshot_list_description"
        android:drawableStart="@drawable/ic_view_snapshots"
        android:paddingStart="@dimen/button_snapshot_list_padding_start"
        android:text="@string/view_snapshots"
        android:textAllCaps="false"
        android:textColor="@color/darkBlue"
        android:textSize="@dimen/button_snapshot_list_text_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonVideoList"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/buttonVideoList"
        android:layout_width="@dimen/no_dp"
        android:layout_height="@dimen/no_dp"
        android:background="@color/transparent"
        android:contentDescription="@string/video_list_description"
        android:drawableStart="@drawable/ic_view_videos"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/button_video_list_padding_horizontal"
        android:text="@string/view_videos"
        android:textAllCaps="false"
        android:textColor="@color/darkBlue"
        android:textSize="@dimen/button_video_list_text_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineMidVertical_navigation" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMidVertical_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>