<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_10dp"
    tools:context=".ui.selectCamera.SelectCameraActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/midTopGuideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/midGuideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/midBottomGuideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/midVerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choose_camera_type"
        android:textColor="@color/darkGrey"
        android:textSize="@dimen/text_size_20sp"
        app:layout_constraintBottom_toBottomOf="@id/midTopGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonX1Camera"
        android:layout_width="@dimen/no_dp"
        android:layout_height="@dimen/no_dp"
        android:layout_marginVertical="@dimen/margin_10dp"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:background="@drawable/selector_select_camera_button"
        android:clickable="true"
        android:focusable="true"
        android:elevation="@dimen/margin_10dp"
        app:layout_constraintBottom_toBottomOf="@id/midGuideline"
        app:layout_constraintEnd_toEndOf="@id/midVerticalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/midTopGuideline">

        <TextView
            android:id="@+id/textViewX1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/x1"
            android:textColor="@color/darkGrey"
            android:paddingVertical="@dimen/padding_10dp"
            android:textSize="@dimen/text_size_30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/no_dp"
            android:layout_margin="@dimen/margin_10dp"
            app:layout_constraintTop_toBottomOf="@id/textViewX1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/x1_camera_button_description"
            android:src="@drawable/x1_display"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="@dimen/text_size_24sp"
        android:textColor="@color/colorGrey"
        app:layout_constraintTop_toTopOf="@id/midTopGuideline"
        app:layout_constraintBottom_toBottomOf="@id/midGuideline"
        app:layout_constraintStart_toStartOf="@id/midVerticalGuideline"
        app:layout_constraintEnd_toEndOf="@id/midVerticalGuideline"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonX2Camera"
        android:layout_width="@dimen/no_dp"
        android:layout_height="@dimen/no_dp"
        android:layout_marginVertical="@dimen/margin_10dp"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:background="@drawable/selector_select_camera_button"
        app:layout_constraintBottom_toBottomOf="@id/midGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/midVerticalGuideline"
        app:layout_constraintTop_toTopOf="@id/midTopGuideline"
        android:elevation="@dimen/margin_10dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/textViewX2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/x2"
            android:textColor="@color/darkGrey"
            android:paddingVertical="@dimen/padding_10dp"
            android:textSize="@dimen/text_size_30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/no_dp"
            android:layout_margin="@dimen/margin_10dp"
            app:layout_constraintTop_toBottomOf="@id/textViewX2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/x2_camera_button_description"
            android:src="@drawable/x2_display" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageViewCameraDisplay"
        android:layout_width="@dimen/no_dp"
        android:layout_height="@dimen/no_dp"
        android:contentDescription="@string/camera_display_image_description"
        app:layout_constraintBottom_toBottomOf="@id/midBottomGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/midGuideline"
        android:src="@drawable/bwc_display"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display"
        android:textColor="@color/darkGrey"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintBottom_toTopOf="@id/midBottomGuideline"
        app:layout_constraintStart_toStartOf="@id/midVerticalGuideline"
        app:layout_constraintEnd_toEndOf="@id/midVerticalGuideline"
        android:layout_marginBottom="@dimen/margin_25dp"/>

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/midBottomGuideline"
        android:background="@drawable/selector_select_camera_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/margin_10dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_20sp"
        android:text="@string/continue_text" />

</androidx.constraintlayout.widget.ConstraintLayout>