<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayoutValidateOfficerId"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewOfficerId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/officer_id"
        android:textColor="@color/white"
        android:textSize="@dimen/text_h5"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/midTopGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputOfficerId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_marginBottom="@dimen/password_text_input_margin_bottom"
        android:background="@drawable/background_login_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/midTopGuideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextOfficerId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pairing_phone_camera_input_height"
            android:background="@android:color/transparent"
            android:digits="@string/allowedOfficerIdPattern"
            android:inputType="textFilter"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:paddingHorizontal="@dimen/pairing_phone_camera_input_edit_padding_sides"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/black"
            tools:text="57014604" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_button_white"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:padding="@dimen/padding_13dp"
        android:textColor="@color/FMABlue"
        android:textSize="@dimen/button_login_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/midGuideline" />

    <TextView
        android:id="@+id/buttonChangeCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_camera_type"
        android:textColor="@color/white"
        android:textSize="@dimen/text_h5"
        android:clickable="true"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/midBottomGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="true" />

    <TextView
        android:id="@+id/textViewOnBoardingCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_on_boarding_cards"
        android:layout_marginTop="@dimen/margin_30dp"
        android:clickable="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/midBottomGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/midTopGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/midGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/midBottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>